# SharsorIPCpp

./: .travis.yml  README.md  index.html
.github/workflows/: focal_CI_build.yml  focal_CI_build_devel.yml  focal_CI_build_main.yml  jammy_CI_build.yml  jammy_CI_build_devel.yml  jammy_CI_build_main.yml  main.yml
SharsorIPCpp/: CMakeLists.txt
SharsorIPCpp/bindings/PySharsorIPC/: CMakeLists.txt  PySharsorIPC.cpp
SharsorIPCpp/bindings/PySharsorIPC/extensions/ros_bridge/: abstractions.py  bridge.py  defs.py  from_ros.py  ros1_utils.py  ros2_utils.py  to_ros.py
SharsorIPCpp/bindings/PySharsorIPC/include/PySharsorIPC/: PyClient.hpp  PyCondVar.hpp  PyConsumer.hpp  PyDTypes.hpp  PyProducer.hpp  PyServer.hpp  PyStringTensor.hpp
SharsorIPCpp/bindings/PySharsorIPC/src/: PyClient.cpp  PyCondVar.cpp  PyConsumer.cpp  PyDTypes.hpp  PyDefs.hpp  PyMemUtils.hpp  PyProducer.cpp  PyServer.cpp  PySharsorIPCUtils.hpp  PyStringTensor.cpp  WrapUtils.hpp  WrapUtils.inl
SharsorIPCpp/bindings/PySharsorIPC/wrappers/: shared_data_view.py  shared_tensor_dict.py
SharsorIPCpp/bindings/python/: CMakeLists.txt  pysharsor_ipc.cpp
SharsorIPCpp/cmake/: ExportSharsorIPCpp.cmake  SharsorIPCppConfig.cmake.in
SharsorIPCpp/docs/: Doxyfile.in
SharsorIPCpp/include/SharsorIPCpp/: Client.hpp  CondVar.hpp  CondVarWrapper.hpp  Consumer.hpp  DTypes.hpp  Helpers.hpp  Journal.hpp  MemDefs.hpp  Producer.hpp  ReturnCodes.hpp  Server.hpp  SharedMemConfig.hpp  StringTensor.hpp
SharsorIPCpp/src/: Client.cpp  CondVar.cpp  CondVarWrapper.cpp  Consumer.cpp  Helpers.cpp  MemDefs.hpp  MemUtils.hpp  PrivUtils.hpp  Producer.cpp  Server.cpp  SharedMemConfig.hpp  StringTensor.cpp  TimeUtils.hpp
SharsorIPCpp/tests/: CMakeLists.txt  client_conn_test.cpp  client_test.cpp  connection_test1.cpp  connection_test2.cpp  consistency_checks_clnt.cpp  consistency_checks_srvr.cpp  read_write_bench.cpp  rt_jitter_test.cpp  run_consistency_check.sh.in  run_parallel_conn_tests.sh.in  segfault_test.cpp  server_conn_test.cpp  server_test.cpp  test_condition_var_receiver.cpp  test_condition_var_sender.cpp  test_condition_var_wrapper_receive.cpp  test_condition_var_wrapper_send.cpp  test_consumer.cpp  test_debug_codes.cpp  test_memory_allocation.cpp  test_producer.cpp
SharsorIPCpp/tests/PySharsorIPC/: check_shared_view_ram.py  perf_and_consistency_test.py  read_write_bench.py  test_1d_0d.py  test_cond_var_receiver.py  test_cond_var_sender.py  test_consumer.py  test_from_ros.py  test_producer.py  test_to_ros.py  test_to_ros_srvr.py
SharsorIPCpp/tests/PySharsorIPC/ros_extension/: test_from_ros.py  test_to_ros.py  test_to_ros_srvr.py
SharsorIPCpp/tests/PySharsorIPC/ros_extension/string_tensor/: test_from_ros.py  test_from_ros_client.py  test_to_ros.py  test_to_ros_srvr.py
SharsorIPCpp/tests/include/: test_utils.hpp
conda/: build.sh  meta.yaml
conda/build_envs/: py3.10_env.yml  py3.11_env.yml  py3.7_env.yml  py3.8_env.yml  py3.9_env.yml  py311_env.yml  py3_10_env.yml  py3_7_env.yml  py3_8_env.yml
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/_static/: CMakeLists_example.txt  custom.css
sharsor_ipcpp/: CMakeLists.txt
sharsor_ipcpp/include/: Server.hpp
sharsor_ipcpp/src/: Client.cpp  Server.cpp
sharsor_ipcpp/tests/: CMakeLists.txt  server_test.cpp
v0.1.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0/_static/: documentation_options.js
